<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"
        android:textSize="22sp" />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black"
        app:cornerRadius="16dp"
        android:foreground="?attr/selectableItemBackground"
        />

    <Button
        android:id="@+id/library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/library"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black"
        app:cornerRadius="16dp"
        android:foreground="?attr/selectableItemBackground"
        />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black"
        app:cornerRadius="16dp"
        android:foreground="?attr/selectableItemBackground"
        />

</LinearLayout>